Add user_name to the user table

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -61,6 +61,14 @@
               >
                 Watch Movie Now
               </a>
-            </div>
-          </div>
-        </div>
+    </div>
+  </div>
+</div>
+<div class="review w-full h-[75vh] my-16">
+  <div class="text-6xl text-red-700 font-semibold">Reviews</div>
+  <div class="comments">
+    <% @comments.each do |comment|%>
+      <%=comment["comment"]%>
+    <%end%>
+  </div>
+</div>
