--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -67,8 +67,37 @@
 <div class="review w-full h-[75vh] my-16">
   <div class="text-6xl text-red-700 font-semibold">Reviews</div>
   <div class="comments">
-    <% @comments.each do |comment|%>
-      <%=comment["comment"]%>
+    <% if @comments.any?%>
+    <a href="#comment">Add a comment</a> <br>
+      <% @comments.each do |comment|%>
+        <div class="w-full py-4 border-solid border-b border-black">
+      <div class="commentor flex h-[30px] md:h-[50px] ">
+          <div class="w-[30px] h-[30px] md:w-[50px] md:h-[50px] bg-green-700 text-lg md:text-2xl font-bold text-black rounded-full mr-2 md:mr-4 flex justify-center items-center">
+            <%=comment.user["user_name"][0]%>
+          </div>
+        <div class="author h-full flex items-center font-semibold justify-center">
+        <%=comment.user["user_name"]%>
+        </div>
+      </div>
+      <div
+        id="comment"
+        class="comment text-sm max-h-[150px] overflow-y-auto"
+      ><%= comment["comment"]%></div>
+    </div>
+      <%end%>
+    <%else%>
+      <div>No Comments found! <a href="#comment">Be the first one to comment</a></div>
     <%end%>
+    <div>
+      <%= form_with model: @review, url: reviews_path(@review), method: "post" do |form| %>
+        <%= form.label :comment%>
+        <%= form.text_area :comment %>
+        <%= form.label :rating%>
+        <%= form.text_field :rating %>
+        <%= form.submit "Submit" %>
+        <%= form.hidden_field :movie_id, value: @found_movie["id"] %>
+        <%= form.hidden_field :user_id, value: '1' %>
+      <% end %>
+    </div>
   </div>
 </div>
