feat: post and delete review with turbo-rails

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,6 @@
   </head>
 
   <body>
-    <div class="w-[90%] mx-auto"><%= yield %></div>
+    <main class="w-[90%] mx-auto my-16 h-max"><%= yield %></main>
   </body>
 </html>
