--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,4 +1,4 @@
-<div class="img w-full h-[75vh] relative" style = "text-shadow: 1px 1px black">
+<div class="img w-full relative" style = "text-shadow: 1px 1px black">
     <%backdrop_path = "https://image.tmdb.org/t/p/w200#{@found_movie["backdrop_path"]}"%>
     <%poster_path = "https://image.tmdb.org/t/p/w200#{@found_movie["poster_path"]}"%>
           <img
@@ -12,7 +12,7 @@
               src="<%=poster_path%>"
               alt="<%@found_movie["original_title"]%>"
             />
-            <div class="description pl-16 hidden md:inline">
+            <div class="description px-8 hidden md:inline">
               <a
                 href={movie_detail.homepage}
                 target="_blank"
@@ -23,7 +23,7 @@
               </a>
               <br />
               <br />
-              <p class="text-[#fff] text-sm lg:text-lg w-4/5">
+              <p class="text-[#fff] text-sm lg:text-lg w-full ">
                 <%=@found_movie["overview"]%>
               </p>
               <table class="w-1/2 text-[#fff] text-left mt-4">
@@ -50,13 +50,12 @@
             </div>
             <div class="buttons flex flex-col justify-center items-center min-w-max">
               <a
-                href={movie_detail.homepage}
+                href="#"
                 class="p-4 text-center text-[#fff] border-2 border-[#fff] m-2 w-full rounded-lg"
               >
                 Watch Trailer
               </a>
-              <a
-                href={movie_detail.homepage}
+              <a href="#"
                 class="p-4 text-center text-[#fff] border-2 border-[#fff] m-2 w-full rounded-lg"
               >
                 Watch Movie Now
@@ -64,40 +63,32 @@
     </div>
   </div>
 </div>
-<div class="review w-full h-[75vh] my-16">
+<div class="review w-full my-16">
   <div class="text-6xl text-red-700 font-semibold">Reviews</div>
   <div class="comments">
-    <% if @comments.any?%>
-    <a href="#comment">Add a comment</a> <br>
-      <% @comments.each do |comment|%>
-        <div class="w-full py-4 border-solid border-b border-black">
-      <div class="commentor flex h-[30px] md:h-[50px] ">
-          <div class="w-[30px] h-[30px] md:w-[50px] md:h-[50px] bg-green-700 text-lg md:text-2xl font-bold text-black rounded-full mr-2 md:mr-4 flex justify-center items-center">
-            <%=comment.user["user_name"][0]%>
-          </div>
-        <div class="author h-full flex items-center font-semibold justify-center">
-        <%=comment.user["user_name"]%>
-        </div>
-      </div>
-      <div
-        id="comment"
-        class="comment text-sm max-h-[150px] overflow-y-auto"
-      ><%= comment["comment"]%></div>
-    </div>
+      <% if @reviews.any?%>
+      <a href="#comment_add">Add a comment</a> <br>
+
+       <%= turbo_frame_tag "comments" do%>
+        <% @reviews.each do |review|%>
+          <%= render 'shared/review', review: %>
+        <%end%>
+        <%end%>
+      <%else%>
+        <div>No Comments found! <a href="#comment_add">Be the first one to comment</a></div>
       <%end%>
-    <%else%>
-      <div>No Comments found! <a href="#comment">Be the first one to comment</a></div>
-    <%end%>
-    <div>
-      <%= form_with model: @review, url: reviews_path(@review), method: "post" do |form| %>
-        <%= form.label :comment%>
-        <%= form.text_area :comment %>
-        <%= form.label :rating%>
-        <%= form.text_field :rating %>
-        <%= form.submit "Submit" %>
-        <%= form.hidden_field :movie_id, value: @found_movie["id"] %>
-        <%= form.hidden_field :user_id, value: '1' %>
-      <% end %>
+    <div class="p-4 border border-solid border-[#d9dbe9] my-4 rounded-lg">
+      <div class="text-3xl font-semibold text-red-800">Comment</div>
+      <%=simple_form_for @review, html: {
+                      class: "quote form", 
+                    }, method: :post do |f| %>
+        <%=f.input :comment, placeholder: 'Add your comment here...', input_html: {class: 'block w-full p-4 text-gray-900 border border-gray-300 rounded-lg text-base focus:ring-blue-500 bg-[#fefefe] focus:border-blue-500 w-full h-[150px] my-4'}, label_html: {class: 'hidden'}%>
+        <%=f.input :rating,placeholder: 'Enter your rating...', input_html: {class: 'block w-full p-4 text-gray-900 border border-gray-300 rounded-lg text-base focus:ring-blue-500 bg-[#fefefe] focus:border-blue-500 w-full h-[45px] my-4'}, label_html: {class: 'hidden'}%>
+        <%=f.input :movie_id, label_html: {class: 'hidden'}, input_html: {class: 'hidden', value: @found_movie.id}%>
+        <%=f.input :user_id, label_html: {class: 'hidden'}, input_html: {class: 'hidden', value: 1}%>
+        <div class="flex justify-end"><%=f.submit "Comment", class: 'border border-solid border-[#d9dbe9] rounded-lg p-2 my-2 hover:bg-gray-200'%></div>
+      <%end%>
     </div>
   </div>
 </div>
+
