--- a/app/views/shared/_review.html.erb
+++ b/app/views/shared/_review.html.erb
@@ -1,8 +1,8 @@
 <%= turbo_frame_tag "review_#{review.id}" do%>
 <div class="w-full py-4 border-solid border-b border-[#d9dbe9] group">
-<div class="commentor flex justify-between h-[30px] md:h-[50px] ">
+<div class="commentor flex justify-between h-[50px] md:h-[50px] ">
     <div class="flex items-center">
-        <div class="w-[30px] h-[30px] md:w-[50px] md:h-[50px] bg-green-700 text-lg md:text-2xl font-bold text-black rounded-full mr-2 md:mr-4 flex justify-center items-center cursor-pointer">
+        <div style="background-color: <%= review.user.user_color%>;" class="w-[50px] h-[50px] text-lg md:text-2xl font-bold text-black rounded-full mr-2 md:mr-4 flex justify-center items-center cursor-pointer">
             <%=review.user["user_name"][0]%>
         </div>
         <div class="author h-full">
